[gd_scene load_steps=18 format=4 uid="uid://b7l5gwlmk8f8y"]

[ext_resource type="PackedScene" uid="uid://b31af15tfptdq" path="res://Scenes/player.tscn" id="1_bbx0x"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="1_kunpw"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_yrajc"]
[ext_resource type="Script" path="res://Scripts/ring_position_canvas_layer.gd" id="2_6a7ij"]
[ext_resource type="Texture2D" uid="uid://b2k7ooimuqef0" path="res://Jungle Pack UI/PNG/upgrade/heart.png" id="2_in034"]
[ext_resource type="Texture2D" uid="uid://dorvvcyiy68t3" path="res://assets/graybox.png" id="2_loit0"]
[ext_resource type="Script" path="res://Scripts/game_ui.gd" id="2_ltyt3"]
[ext_resource type="Script" path="res://Scripts/ring_reference_marker.gd" id="2_r6be6"]
[ext_resource type="Script" path="res://Scripts/ring_boundary.gd" id="4_lf18l"]
[ext_resource type="Texture2D" uid="uid://dqu7ulmhdh6vc" path="res://Sprites/Oranges and Bananas/banana.png" id="4_rakfa"]
[ext_resource type="Theme" uid="uid://b0u0rq7ucwsr8" path="res://assets/default_custom_theme.tres" id="5_55roh"]
[ext_resource type="Texture2D" uid="uid://dbt52ox0samuk" path="res://assets/black_vignette.png" id="5_fsbbq"]
[ext_resource type="PackedScene" uid="uid://c21bbbmd0n12n" path="res://Scenes/level_generator.tscn" id="7_pa1g6"]
[ext_resource type="PackedScene" uid="uid://b1w88xtqfpvc7" path="res://Scenes/xl_platform.tscn" id="8_nlm3j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lr1ly"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p6s8q"]
texture = ExtResource("2_loit0")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_rbbwr"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_p6s8q")

[node name="Game" type="Node2D"]
script = ExtResource("1_yrajc")

[node name="GameUI" type="CanvasLayer" parent="."]
script = ExtResource("2_ltyt3")

[node name="MarginContainer" type="MarginContainer" parent="GameUI"]
offset_right = 105.0
offset_bottom = 94.0
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 30

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI/MarginContainer"]
layout_mode = 2

[node name="HeartTextureRect" type="TextureRect" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_in034")
expand_mode = 3

[node name="x" type="Label" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_55roh")
text = "x"

[node name="HealthCount" type="Label" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_55roh")
text = "3"

[node name="Spacer" type="Control" parent="GameUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="BananaTextureRect" type="TextureRect" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_rakfa")
expand_mode = 3

[node name="x2" type="Label" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_55roh")
text = "x"

[node name="ProjectileCount" type="Label" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_55roh")
text = "0"

[node name="Spacer2" type="Control" parent="GameUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DistanceClimbed" type="Label" parent="GameUI/MarginContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("5_55roh")
text = "height: 0"

[node name="RingPositionCanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_6a7ij")

[node name="RingReferenceMarker" type="Marker2D" parent="RingPositionCanvasLayer"]
script = ExtResource("2_r6be6")

[node name="RingBoundary" type="StaticBody2D" parent="."]
visible = false
z_index = 10
scale = Vector2(1.25, 1.25)
collision_layer = 4
collision_mask = 0
script = ExtResource("4_lf18l")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="RingBoundary"]
position = Vector2(16, -4)
scale = Vector2(1.835, 1.835)
texture = ExtResource("5_fsbbq")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RingBoundary"]
build_mode = 1
polygon = PackedVector2Array(-16, -525, -16, -523.9, -71.2, -518, -77.2, -518, -125.1, -506, -129.3, -506, -160.4, -495, -163.4, -495, -230.4, -464, -232.6, -464, -286.6, -429, -288.7, -429, -319.7, -403, -321.8, -403, -342.8, -382, -344.9, -382, -393.9, -327, -395.1, -327, -436.1, -264, -437.3, -264, -469.3, -194, -470.5, -194, -483.5, -152, -484.6, -152, -491.6, -120, -492.7, -120, -501.8, -53, -503, -53, -503, 33.2, -493, 95.3, -493, 100.3, -471, 171.2, -471, 174.5, -443, 233.4, -443, 235.6, -408, 289.6, -408, 291.7, -382, 322.7, -382, 324.8, -361, 345.8, -361, 347.9, -306, 396.8, -306, 398.1, -243, 439.1, -243, 440.3, -173, 472.2, -173, 473.5, -108, 492.4, -108, 493.7, -60, 501.7, -60, 502.8, -14.1, 507, 38.1, 507, 74.2, 503, 82.2, 503, 116.4, 496, 121.3, 496, 184.3, 477, 187.4, 477, 225.4, 460, 228.5, 460, 263.6, 441, 265.6, 441, 303.6, 416, 305.7, 416, 326.8, 399, 328.8, 399, 382.9, 349, 383.9, 349, 429.9, 293, 431.1, 293, 465.1, 237, 466.3, 237, 496.3, 168, 497.5, 168, 510.5, 123, 511.6, 123, 519.7, 82, 520.8, 82, 526.8, 19, 528, 19, 528, -35.1, 523, -79.2, 523, -86.2, 512, -135.4, 512, -139.3, 495, -189.4, 495, -192.5, 467, -251.5, 467, -253.6, 449, -282.7, 449, -284.7, 412, -333.7, 412, -335.8, 385, -363.8, 385, -365.9, 340, -406.9, 340, -408, 289, -444.1, 289, -445.2, 230, -476.3, 230, -477.4, 197, -490.4, 197, -491.5, 144, -507.5, 144, -508.7, 91, -518.7, 91, -519.8, 40, -523.9, 40, -525)

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("1_kunpw")

[node name="KillZone" type="Area2D" parent="Camera2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/KillZone"]
shape = SubResource("RectangleShape2D_lr1ly")

[node name="LevelGenerator" parent="." instance=ExtResource("7_pa1g6")]
platform_scene = ExtResource("8_nlm3j")

[node name="Player" parent="." instance=ExtResource("1_bbx0x")]
position = Vector2(1008, 1056)
max_speed = 300
up_gravity = 2000
down_gravity = 2000
jump_amount = 1200

[node name="GroundTileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAEMAAAAAAAAAAAABAEMAAAAAAAAAAAACAEMAAAAAAAAAAAADAEMAAAAAAAAAAAAEAEMAAAAAAAAAAAAFAEMAAAAAAAAAAAAGAEMAAAAAAAAAAAAHAEMAAAAAAAAAAAAIAEMAAAAAAAAAAAAJAEMAAAAAAAAAAAAKAEMAAAAAAAAAAAALAEMAAAAAAAAAAAAMAEMAAAAAAAAAAAANAEMAAAAAAAAAAAAOAEMAAAAAAAAAAAAPAEMAAAAAAAAAAAAQAEMAAAAAAAAAAAARAEMAAAAAAAAAAAASAEMAAAAAAAAAAAATAEMAAAAAAAAAAAAUAEMAAAAAAAAAAAAVAEMAAAAAAAAAAAAWAEMAAAAAAAAAAAAXAEMAAAAAAAAAAAAYAEMAAAAAAAAAAAAZAEMAAAAAAAAAAAAaAEMAAAAAAAAAAAAbAEMAAAAAAAAAAAAcAEMAAAAAAAAAAAAdAEMAAAAAAAAAAAAeAEMAAAAAAAAAAAAfAEMAAAAAAAAAAAAgAEMAAAAAAAAAAAAhAEMAAAAAAAAAAAAiAEMAAAAAAAAAAAAjAEMAAAAAAAAAAAAkAEMAAAAAAAAAAAAlAEMAAAAAAAAAAAAmAEMAAAAAAAAAAAAnAEMAAAAAAAAAAAAoAEMAAAAAAAAAAAApAEMAAAAAAAAAAAAqAEMAAAAAAAAAAAArAEMAAAAAAAAAAAAsAEMAAAAAAAAAAAAtAEMAAAAAAAAAAAAuAEMAAAAAAAAAAAAvAEMAAAAAAAAAAAAwAEMAAAAAAAAAAAAxAEMAAAAAAAAAAAAyAEMAAAAAAAAAAAAzAEMAAAAAAAAAAAA0AEMAAAAAAAAAAAA1AEMAAAAAAAAAAAA2AEMAAAAAAAAAAAA3AEMAAAAAAAAAAAA4AEMAAAAAAAAAAAA5AEMAAAAAAAAAAAA6AEMAAAAAAAAAAAA7AEMAAAAAAAAAAAAAAEIAAAAAAAAAAAABAEIAAAAAAAAAAAACAEIAAAAAAAAAAAADAEIAAAAAAAAAAAAEAEIAAAAAAAAAAAAFAEIAAAAAAAAAAAAGAEIAAAAAAAAAAAAHAEIAAAAAAAAAAAAIAEIAAAAAAAAAAAAJAEIAAAAAAAAAAAAKAEIAAAAAAAAAAAALAEIAAAAAAAAAAAAMAEIAAAAAAAAAAAANAEIAAAAAAAAAAAAOAEIAAAAAAAAAAAAPAEIAAAAAAAAAAAAQAEIAAAAAAAAAAAARAEIAAAAAAAAAAAASAEIAAAAAAAAAAAATAEIAAAAAAAAAAAAUAEIAAAAAAAAAAAAVAEIAAAAAAAAAAAAWAEIAAAAAAAAAAAAXAEIAAAAAAAAAAAAYAEIAAAAAAAAAAAAZAEIAAAAAAAAAAAAaAEIAAAAAAAAAAAAbAEIAAAAAAAAAAAAcAEIAAAAAAAAAAAAdAEIAAAAAAAAAAAAeAEIAAAAAAAAAAAAfAEIAAAAAAAAAAAAgAEIAAAAAAAAAAAAhAEIAAAAAAAAAAAAiAEIAAAAAAAAAAAAjAEIAAAAAAAAAAAAkAEIAAAAAAAAAAAAlAEIAAAAAAAAAAAAmAEIAAAAAAAAAAAAnAEIAAAAAAAAAAAAoAEIAAAAAAAAAAAApAEIAAAAAAAAAAAAqAEIAAAAAAAAAAAArAEIAAAAAAAAAAAAsAEIAAAAAAAAAAAAtAEIAAAAAAAAAAAAuAEIAAAAAAAAAAAAvAEIAAAAAAAAAAAAwAEIAAAAAAAAAAAAxAEIAAAAAAAAAAAAyAEIAAAAAAAAAAAAzAEIAAAAAAAAAAAA0AEIAAAAAAAAAAAA1AEIAAAAAAAAAAAA2AEIAAAAAAAAAAAA3AEIAAAAAAAAAAAA4AEIAAAAAAAAAAAA5AEIAAAAAAAAAAAA6AEIAAAAAAAAAAAA7AEIAAAAAAAAAAAA8AEIAAAAAAAAAAAA8AEMAAAAAAAAAAAA9AEIAAAAAAAAAAAA9AEMAAAAAAAAAAAA+AEIAAAAAAAAAAAA+AEMAAAAAAAAAAAA/AEIAAAAAAAAAAAA/AEMAAAAAAAAAAABAAEIAAAAAAAAAAABAAEMAAAAAAAAAAABBAEIAAAAAAAAAAABBAEMAAAAAAAAAAABCAEIAAAAAAAAAAABCAEMAAAAAAAAAAABDAEIAAAAAAAAAAABDAEMAAAAAAAAAAABEAEIAAAAAAAAAAABEAEMAAAAAAAAAAABFAEIAAAAAAAAAAABFAEMAAAAAAAAAAABGAEIAAAAAAAAAAABGAEMAAAAAAAAAAABHAEIAAAAAAAAAAABHAEMAAAAAAAAAAABIAEIAAAAAAAAAAABIAEMAAAAAAAAAAABJAEIAAAAAAAAAAABJAEMAAAAAAAAAAABKAEIAAAAAAAAAAABKAEMAAAAAAAAAAABLAEIAAAAAAAAAAABLAEMAAAAAAAAAAABMAEIAAAAAAAAAAABMAEMAAAAAAAAAAABNAEIAAAAAAAAAAABNAEMAAAAAAAAAAABOAEIAAAAAAAAAAABOAEMAAAAAAAAAAABPAEIAAAAAAAAAAABPAEMAAAAAAAAAAABQAEIAAAAAAAAAAABQAEMAAAAAAAAAAABRAEIAAAAAAAAAAABRAEMAAAAAAAAAAABSAEIAAAAAAAAAAABSAEMAAAAAAAAAAABTAEIAAAAAAAAAAABTAEMAAAAAAAAAAABUAEIAAAAAAAAAAABUAEMAAAAAAAAAAABVAEIAAAAAAAAAAABVAEMAAAAAAAAAAABWAEIAAAAAAAAAAABWAEMAAAAAAAAAAABXAEIAAAAAAAAAAABXAEMAAAAAAAAAAABYAEIAAAAAAAAAAABYAEMAAAAAAAAAAABZAEIAAAAAAAAAAABZAEMAAAAAAAAAAABaAEIAAAAAAAAAAABaAEMAAAAAAAAAAABbAEIAAAAAAAAAAABbAEMAAAAAAAAAAABcAEIAAAAAAAAAAABcAEMAAAAAAAAAAABdAEIAAAAAAAAAAABdAEMAAAAAAAAAAABeAEIAAAAAAAAAAABeAEMAAAAAAAAAAABfAEIAAAAAAAAAAABfAEMAAAAAAAAAAABgAEIAAAAAAAAAAABgAEMAAAAAAAAAAABhAEIAAAAAAAAAAABhAEMAAAAAAAAAAABiAEIAAAAAAAAAAABiAEMAAAAAAAAAAABjAEIAAAAAAAAAAABjAEMAAAAAAAAAAABkAEIAAAAAAAAAAABkAEMAAAAAAAAAAABlAEIAAAAAAAAAAABlAEMAAAAAAAAAAABmAEIAAAAAAAAAAABmAEMAAAAAAAAAAABnAEIAAAAAAAAAAABnAEMAAAAAAAAAAABoAEIAAAAAAAAAAABoAEMAAAAAAAAAAABpAEIAAAAAAAAAAABpAEMAAAAAAAAAAABqAEIAAAAAAAAAAABqAEMAAAAAAAAAAABrAEIAAAAAAAAAAABrAEMAAAAAAAAAAABsAEIAAAAAAAAAAABsAEMAAAAAAAAAAABtAEIAAAAAAAAAAABtAEMAAAAAAAAAAABuAEIAAAAAAAAAAABuAEMAAAAAAAAAAABvAEIAAAAAAAAAAABvAEMAAAAAAAAAAABwAEIAAAAAAAAAAABwAEMAAAAAAAAAAABxAEIAAAAAAAAAAABxAEMAAAAAAAAAAAByAEIAAAAAAAAAAAByAEMAAAAAAAAAAABzAEIAAAAAAAAAAABzAEMAAAAAAAAAAAB0AEIAAAAAAAAAAAB0AEMAAAAAAAAAAAB1AEIAAAAAAAAAAAB1AEMAAAAAAAAAAAB2AEIAAAAAAAAAAAB2AEMAAAAAAAAAAAB3AEIAAAAAAAAAAAB3AEMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_rbbwr")

[connection signal="body_entered" from="Camera2D/KillZone" to="Camera2D" method="_on_kill_zone_body_entered"]
